// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormComponent should match snapshot 1`] = `
<ng-component
  form={[Function _NgForm]}
  value="undefined"
>
  <form
    auiform=""
    auiformlabelposition="left"
    auiformlabelwidth="100px"
    class="ng-untouched ng-pristine ng-valid aui-form"
    novalidate=""
  >
    <aui-form-item>
      <div
        class="aui-form-item aui-form-item--left"
      >
        <div
          class="hasLabel aui-form-item__label-wrapper aui-form-item__label-wrapper--required aui-form-item__label-wrapper--left"
          style="width: 100px;"
        >
          <label
            auiformitemlabel=""
            class="aui-form-item__label"
          >
            label
          </label>
        </div>
        <div
          class="aui-form-item__container"
        >
          <div
            class="aui-form-item__content"
          >
            <input
              aui-input=""
              auiformitemcontrol=""
              class="aui-input aui-input--medium ng-untouched ng-pristine ng-valid aui-form-item__control"
              minlength="3"
              name="name"
              required=""
            />
            <div
              class="aui-form-item__addon-wrapper"
            >
              <div
                auiformitemaddon=""
                class="aui-form-item__addon"
              >
                addon
              </div>
            </div>
          </div>
          <div
            class="aui-form-item__hint-wrapper"
          >
            <div
              auiformitemhint=""
              class="aui-form-item__hint"
            >
              input your name
            </div>
          </div>
        </div>
      </div>
    </aui-form-item>
  </form>
</ng-component>
`;

exports[`FormComponent should match snapshot 2`] = `
<ng-component
  form={[Function _NgForm]}
  value="undefined"
>
  <form
    auiform=""
    auiformlabelposition="left"
    auiformlabelwidth="100px"
    class="ng-untouched ng-pristine aui-form ng-invalid ng-submitted"
    novalidate=""
  >
    <aui-form-item>
      <div
        class="aui-form-item aui-form-item--left hasError"
      >
        <div
          class="hasLabel aui-form-item__label-wrapper aui-form-item__label-wrapper--required aui-form-item__label-wrapper--left"
          style="width: 100px;"
        >
          <label
            auiformitemlabel=""
            class="aui-form-item__label"
          >
            label
          </label>
        </div>
        <div
          class="aui-form-item__container"
        >
          <div
            class="aui-form-item__content"
          >
            <input
              aui-input=""
              auiformitemcontrol=""
              class="aui-input aui-input--medium ng-untouched ng-pristine aui-form-item__control ng-invalid"
              minlength="3"
              name="name"
              required=""
            />
            <div
              class="aui-form-item__addon-wrapper"
            >
              <div
                auiformitemaddon=""
                class="aui-form-item__addon"
              >
                addon
              </div>
            </div>
          </div>
          <div
            class="aui-form-item__hint-wrapper"
          >
            <div
              auiformitemhint=""
              class="aui-form-item__hint"
            >
              input your name
            </div>
          </div>
        </div>
      </div>
    </aui-form-item>
  </form>
</ng-component>
`;
